# hw10

./: pyproject.toml
quotes/: test.py
quotes/quoteapp/: admin.py  models.py  urls.py  utils.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py
quotes/quoteapp/static/quoteapp/: style.css
quotes/quoteapp/templates/quoteapp/: base.html  index.html
quotes/quoteapp/templatetags/: extract.py
quotes/quotes/: settings.py  urls.py
quotes/users/: urls.py  views.py
quotes/utils/: migration.py  mongodb.py
